# Operations

./: .gitignore  ArmedAction.qml  ArmedActionTile.qml  ArmingControls.qml  ArmingTile.qml  CMakeLists.txt  CommandPairTile.qml  CommandTestTile.qml  CommandTile.qml  Indicator.qml  Main.qml  MockActionTile.qml  MockTile.qml  MqttSubscriber.qml  OnOffControls.qml  README.md  StatusIndicator.qml  Tile.qml  ValveActionTile.qml  action.h  command.cpp  command.h  commandservice.cpp  commandservice.h  conanfile.txt  controller.cpp  controller.h  main.cpp  mqttcommand.cpp  mqttcommand.h  mqttcommandservice.cpp  mqttcommandservice.h  qmlmqttclient.cpp  qmlmqttclient.h  qmlqsettings.cpp  qmlqsettings.h
Tests/: CMakeLists.txt  main.cpp  tst_mqttcommandtest.cpp
